--- a/starter/04-CSS-Layouts/style.css
+++ b/starter/04-CSS-Layouts/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 .container {
-  width: 800px;
+  width: 1200px;
   /* margin-left: auto;
   margin-right: auto; */
   margin: 0 auto;
@@ -37,6 +37,7 @@ nav {
 
 article {
   margin-bottom: 60px;
+  flex: 1;
 }
 
 .post-header {
@@ -52,6 +53,7 @@ aside {
   padding-bottom: 50px; */
   padding: 50px 0;
   width: 500px;
+  flex: 0 0 300px;
 }
 
 /* SMALLER ELEMENTS */
@@ -222,9 +224,9 @@ h1::first-letter {
   margin-right: 5px;
 }
 
-h3 + p::first-line {
-  /* color: red; */
-}
+/* h3 + p::first-line {
+  color: red;
+} */
 
 h2 {
   /* background-color: orange; */
@@ -265,3 +267,95 @@ footer p {
 nav p {
   font-size: 18px;
 } */
+
+/* FLOATS */
+/*
+.author-img {
+  float: left;
+  margin-bottom: 20px;
+}
+
+.author {
+  padding-left: 80px;
+  float: left;
+  margin-top: 10px;
+  margin-left: 20px;
+}
+
+h1 {
+  float: left;
+}
+
+nav {
+  float: right;
+}
+
+.clear {
+  clear: both;
+}
+
+.clearfix::after {
+  clear: both;
+  content: "";
+  display: block;
+}
+
+article{
+  width: 825px;
+  float: left;
+}
+
+aside{
+  width: 300px;
+  float: right;
+}
+
+footer{
+  clear: both;
+}
+*/
+
+/* FLEXBOX */
+.main-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.author-box {
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
+#author {
+  margin-bottom: 0;
+  margin-left: 15px;
+}
+
+.related-post {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.related-link {
+  font-size: 17px;
+  font-weight: bold;
+  font-style: normal;
+  margin-bottom: 5px;
+  display: block;
+}
+.related-author {
+  margin-bottom: 0;
+  font-size: 14px;
+  font-weight: normal;
+  font-style: italic;
+}
+
+.row {
+  display: flex;
+  align-items: flex-start;
+  gap: 75px;
+  margin-bottom: 60px;
+}
