--- a/starter/04-CSS-Layouts/style-c.css
+++ b/starter/04-CSS-Layouts/style-c.css
@@ -18,6 +18,10 @@ body{
     position: relative;
     width: 825px;
     margin: 50px auto;
+
+    display: grid;
+    grid-template-columns: 250px 1fr 1fr;
+    column-gap: 40px;
 }
 
 .sale{
@@ -44,7 +48,8 @@ h2{
     font-size: 20px;
     font-style: bold;
     padding: 10px;
-    
+
+    grid-column: 1 / -1;
 }
 
 /* p {
@@ -101,6 +106,7 @@ h2{
     padding: 15px;
     width: 100%;
     border-top: 4px solid black;
+    grid-column: 1 / -1;
 }
 .add-cart:hover{
     color: #000;
@@ -154,8 +160,8 @@ svg {
     margin-bottom: 10px;
 }
 
-.cont {
-    justify-content: space-between;
-    display: flex;
-    align-items: center;
-}
+/*.cont {*/
+/*    justify-content: space-between;*/
+/*    display: flex;*/
+/*    align-items: center;*/
+/*}*/
